fdo#88623 replace std::deque with std::vector in xlsx saving

Change-Id: I0b9c44b405e2c617c60e11a1a15eaeb867cba57e